--- a/css/main.scss
+++ b/css/main.scss
@@ -20,9 +20,10 @@ $brand-color:      #2a7ae2;
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
+$grey-color-med:  #ababab;
 
 // Width of the content area
-$content-width:    800px;
+$content-width:    900px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
@@ -43,10 +44,12 @@ $on-laptop:        800px;
 }
 
 
+@import url(http://fonts.googleapis.com/css?family=Amatic+SC:400,700|Rock+Salt);
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
+        "fonts",
         "layout",
         "syntax-highlighting"
 ;
