--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,9 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+  
+  <script src="http://code.jquery.com/jquery.min.js"></script>
+  <link rel="stylesheet" href="/js/vegas/vegas.min.css">
+  <script src="/js/vegas/vegas.min.js"></script>
+  
 </head>
