--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,4 +4,4 @@ layout: page
 <div class='content-with-slideshow'>
   {{ content }}
 </div>
-<div class="slideshow"> </div>
+<div id="home-slideshow"> </div>
