--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -237,14 +237,19 @@
 /**
  * Posts
  */
+
+h2, h3, h4, h5, h6 {
+  font-family: "janda";
+  
+}
+
 .post-header {
     margin-bottom: $spacing-unit;
 }
 
-.post-title {
+h2 {
     font-size: 42px;
     letter-spacing: 0px;
-    font-family: "janda";
     line-height: 1;
 
     @include media-query($on-laptop) {
@@ -283,10 +288,16 @@
     .content-with-slideshow {
       float: left;
       width: 60%;
+      padding-right: 5%;
     }
-    .slideshow {
+    #home-slideshow {
       float: left;
       width: 300px;
       height: 250px;
     }
+    #celeb-slideshow {
+      width: 280px;
+      height: 420px;
+    }
+    
 }
