--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,20 +1,21 @@
 <footer class="site-footer">
 
   <div class="wrapper">
+    <div class='footer-content'>
+      <h2 class="footer-heading">{{ site.title }}</h2>
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col  footer-col-3">
-        <ul class="contact-list">
-          <li>RSVP: <a href="http://mekelhammer.rsvpify.com" target="_NEW">mekelhammer.rsvpify.com</a></li>
-          <li>Registry: <a target="_NEW" href="http://weddingrepublic.com/mekelhammer">weddingrepublic.com/mekelhammer</a></li>
-        </ul>
-      </div>
+      <div class="footer-col-wrapper">
+        <div class="footer-col  footer-col-3">
+          <ul class="contact-list">
+            <li>RSVP: <a href="http://mekelhammer.rsvpify.com" target="_NEW">mekelhammer.rsvpify.com</a></li>
+            <li>Registry: <a target="_NEW" href="http://weddingrepublic.com/mekelhammer">weddingrepublic.com/mekelhammer</a></li>
+          </ul>
+        </div>
 
 
-      <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
+        <div class="footer-col  footer-col-3">
+          <p class="text">{{ site.description }}</p>
+        </div>
       </div>
     </div>
 
