--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,11 +1,18 @@
+
 .all-content-wrapper {
-  opacity: 0.25;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
+  
+  background-image:  url('/img/slide9.jpg');
+  background-size:   cover;
+  background-repeat: no-repeat;
+  background-position: top center;   
+  
   img {
+    display: none;
     min-height: 100%;
     min-width: 100%;
   }
@@ -14,21 +21,56 @@
 /**
  * Site header
  */
-.site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-med;
-    min-height: 56px;
-
-    // Positioning context for the mobile navigation icon
-    position: relative;
-    @include media-query($on-palm) {
-      position: fixed;
-      top:0;
-      min-height: 56px;
+.site-header, .fader {
+    
+    position: fixed;
+    top:0;
+    height: $header-desktop-height;
+    width: 100%;
+    z-index: 100;
+    &:after {
+      content: "";
+      background: url('/img/slide9.JPG');
+      background-size: 100% auto;
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
-      background: $background-color;
-      z-index: 100;
+      height: 100%;
+      opacity: 1;
+      z-index: -1;
     }
+
+    @include media-query($on-palm) {
+      height: $header-mobile-height;
+    }
+}
+.fader {
+  z-index: 99;
+  opacity: 0.3;
+  &#fader-1  { height: $header-desktop-height + 2px; }
+  &#fader-2  { height: $header-desktop-height + 4px; }
+  &#fader-3  { height: $header-desktop-height + 6px; }
+  &#fader-4  { height: $header-desktop-height + 8px; }
+  &#fader-5  { height: $header-desktop-height + 10px; }
+  &#fader-6  { height: $header-desktop-height + 12px; }
+  &#fader-7  { height: $header-desktop-height + 14px; }
+  &#fader-8  { height: $header-desktop-height + 16px; }
+  &#fader-9  { height: $header-desktop-height + 18px; }
+  &#fader-10 { height: $header-desktop-height + 20px; }
+  @include media-query($on-palm) {
+    &#fader-1 { height: $header-mobile-height + 2px; }
+    &#fader-2 { height: $header-mobile-height + 4px; }
+    &#fader-3 { height: $header-mobile-height + 6px; }
+    &#fader-4 { height: $header-mobile-height + 8px; }
+    &#fader-5 { height: $header-mobile-height + 10px; }
+    &#fader-6 { height: $header-mobile-height + 12px; }
+    &#fader-7 { height: $header-mobile-height + 14px; }
+    &#fader-8 { height: $header-mobile-height + 16px; }
+    &#fader-9 { height: $header-mobile-height + 18px; }
+    &#fader-10 { height: $header-mobile-height + 20px; }
+  }
+
 }
 
 .site-title {
@@ -39,12 +81,17 @@
     display: block;
     text-align: center;
     font-family: "Amatic SC";
+    font-weight: bold;
+    color: white;
     &,
     &:visited {
-        color: $grey-color-dark;
+        color: white;
     }
     @include media-query($on-palm) {
-      font-size: 18px;
+      font-size: 28px;
+      text-align: left;
+      width: 280px;
+      line-height: 1.2em;
       text-align: left;
     }
 }
@@ -56,7 +103,7 @@
     width: auto;
     text-align: center;
     font-family: "Amatic SC";
-    font-weight: bold;
+    font-weight: normal;
     font-size: 28px;
     letter-spacing: 1px;
     position: relative;
@@ -68,7 +115,10 @@
     .page-link {
         color: $text-color;
         line-height: $base-line-height;
-
+        &.pinned {
+          color: darken($w-dark-blue, 10%);
+          font-weight: bold;
+        }
         // Gaps between nav items, but not on the first one
         &:not(:first-child) {
             margin-left: 20px;
@@ -103,7 +153,7 @@
                 height: 15px;
 
                 path {
-                    fill: $grey-color-dark;
+                    fill: $text-color;
                 }
             }
         }
@@ -131,7 +181,7 @@
  * Site footer
  */
 .site-footer {
-    border-top: 1px solid $grey-color-med;
+    border: none;
     padding: $spacing-unit 0;
     position: relative;
 }
@@ -149,7 +199,7 @@
 
 .footer-col-wrapper {
     font-size: 15px;
-    color: $grey-color;
+    color: $grey-color-light;
     margin-left: -$spacing-unit / 2;
     @extend %clearfix;
 }
@@ -204,9 +254,36 @@
 .page-content {
     position: relative;
     padding: $spacing-unit 0;
+    
+    margin-top: $header-desktop-height + 20px;
     @include media-query($on-palm) {
-      margin-top: 50px;
+      margin-top: $header-mobile-height + 20px;
     }
+
+}
+
+.page-content, .site-footer {
+  z-index: 10;
+}
+
+.post, .footer-content {
+  color: white;      
+  
+  position: relative;
+  z-index: 10;
+  &:after {
+    content: "";
+    position: absolute;
+    opacity: 0.6;
+    margin: -2%;
+    width: 104%;
+    height: 104%;
+    top: 0;
+    display: block;
+    left: 0;
+    background: #000;
+    z-index: -1;
+  }
 }
 
 .page-heading {
@@ -238,10 +315,6 @@
  * Posts
  */
 
-h2, h3, h4, h5, h6 {
-  font-family: "janda";
-  
-}
 
 .post-header {
     margin-bottom: $spacing-unit;
