--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -103,7 +103,7 @@
     width: auto;
     text-align: center;
     font-family: "Amatic SC";
-    font-weight: normal;
+    font-weight: bold;
     font-size: 28px;
     letter-spacing: 1px;
     position: relative;
@@ -275,9 +275,10 @@
     content: "";
     position: absolute;
     opacity: 0.6;
-    margin: -2%;
-    width: 104%;
-    height: 104%;
+    margin: -20px -15px;
+    padding: 20px 15px;
+    width: 100%;
+    height: 100%;
     top: 0;
     display: block;
     left: 0;
