--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,9 @@
 
 
         <div class="footer-col  footer-col-3">
+          <ul class="contact-list">
+            <li>Questions: <a href="mailto:wedding@mekelhammer.com" target="_NEW">wedding@mekelhammer.com</a></li>
+          </ul>
           <p class="text">{{ site.description }}</p>
         </div>
       </div>
