--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,7 +6,7 @@
   right: 0;
   bottom: 0;
   
-  background-image:  url('/img/slide9.jpg');
+  background-image:  url('/img/slide9.JPG');
   background-size:   cover;
   background-repeat: no-repeat;
   background-position: top center;   
