--- a/_layouts/rsvp.html
+++ b/_layouts/rsvp.html
@@ -2,5 +2,6 @@
 layout: page
 ---
 
+{{ content }}
 
 <iframe id="rsvpify" src="http://mekelhammer.rsvpify.com/?embed=1" frameborder="0" width="100%" height="600px"></iframe>
