--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,25 @@
 <footer class="site-footer">
 
+  
+
   <div class="wrapper">
     <div class='footer-content'>
       <h2 class="footer-heading">{{ site.title }}</h2>
-
+       <div id="disqus_thread"></div>
+      <script type="text/javascript">
+          /* * * CONFIGURATION VARIABLES * * */
+          var disqus_shortname = 'mekelhammer';
+          var disqus_identifier =  'mekelhammer-wedding-guestbook';
+        
+          /* * * DON'T EDIT BELOW THIS LINE * * */
+          (function() {
+              var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+              dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+              (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+          })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+          
       <div class="footer-col-wrapper">
         <div class="footer-col  footer-col-3">
           <ul class="contact-list">
