add wedpics link in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,6 +32,8 @@
         <div class="footer-col  footer-col-3">
           <ul class="contact-list">
             <li>Questions: <a href="mailto:wedding@mekelhammer.com" target="_NEW">wedding@mekelhammer.com</a></li>
+            <li>Share Photos! Go to
+              <a href="https://wedpics.com/">wedpics.com</a>  <br> and enter code RACHELALEX79</li>
           </ul>
         </div>
       </div>
