--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,9 @@
   
   <script src="http://code.jquery.com/jquery.min.js"></script>
   <link rel="stylesheet" href="/js/vegas/vegas.min.css">
+  
+  <script src="/js/jquery-2.2.0.min.js"></script>
   <script src="/js/vegas/vegas.min.js"></script>
+  <script src="/js/moment.js"></script>
   
 </head>
