--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,6 @@
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
-        <span>Menu</span>
         <svg viewBox="0 0 18 15">
           <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
           <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
@@ -14,7 +13,6 @@
         </svg>
       
       </a>
-
       <div class="trigger">
         {% for p in site.pages %}
           {% if p.title %}
@@ -26,7 +24,25 @@
     </nav>
 
   </div>
+
+  <script type="text/javascript">
+    $(document).ready(function() {
+      var d1 = moment().startOf('day');
+      var d2 = moment("20160709", "YYYYMMDD").startOf('day');
+      var daysLeft = (d2.diff(d1, 'days'));
+      if (daysLeft >= 0) {
+        $("#days-left-count").text(daysLeft);
+        $("#days-left").show();
+      }    
+    })
+  </script>
+  <div id='days-left'><span id='days-left-count'></span> days until mekelhammer!</div>        
+        
+  
 </header>
+
+
+
 <div class='fader' id="fader-1"></div>
 <div class='fader' id="fader-2"></div>
 <div class='fader' id="fader-3"></div>
