lions club slideshow

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,17 @@
                 { src: "/img/celeb8.JPG" },
             ]
         });
+        
+        $("#lions-slideshow").vegas({
+            delay: 2500,
+            align: "top", 
+            slides: [
+                { src: "/img/lions-club-1.JPG" },
+                { src: "/img/lions-club-2.JPG" },
+                { src: "/img/lions-club-3.JPG" },
+            ]
+        });
+        
       </script>
   </body>
 
