--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -413,6 +413,12 @@ h2 {
       height: 420px;
       margin: 20px 0;
     }
+    #lions-slideshow {
+      max-width: 500px;
+      width: 100%;
+      height: 375px;
+      margin-bottom: 2em;
+    }
     
     a.large-link {
       font-weight: bold;
