--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
         <div class="footer-col  footer-col-3">
           <ul class="contact-list">
             <li>RSVP: <a href="http://mekelhammer.rsvpify.com" target="_NEW">mekelhammer.rsvpify.com</a></li>
-            <li>Registry: <a target="_NEW" href="http://weddingrepublic.com/mekelhammer">weddingrepublic.com/mekelhammer</a></li>
+            <li>Registry: <a target="_NEW" href="http://www.honeyfund.com/wedding/mekelhammer">honeyfund.com/wedding/mekelhammer</a></li>
           </ul>
         </div>
 
