--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,14 @@
     {% include header.html %}
 
     <div class="page-content">
+      <div class="quick-info">
+        <div class="post">
+          <a href="/img/schedule.jpg">Downloadable Wedding Schedule (save it to your phone!)</a>
+          <br/><br/>
+          <a href="https://wedpics.com/">Share photos with wedpics!</a> Enter code RACHELALEX79
+        </div>
+      </div>
+
       
       <div class="wrapper">
         {{ content }}
